--- a/exp/README
+++ b/exp/README
@@ -1,2 +1,2 @@
-golang.org/x/mobile/exp contains experimental packages for mobile app
+github.com/provpn/mobile/exp contains experimental packages for mobile app
 development.
